# forge-cli

./: .gitignore  .golangci.yml  CLAUDE.md  CODEBASE_AUDIT.md  CONTRIBUTING.md  GETTING_STARTED.md  LINGON_SPEC.md  MUTATION_PROGRESS_UPDATE.md  MUTATION_TEST_PROGRESS.md  MUTATION_TEST_SUMMARY.md  Makefile  README.md  REFACTORING_PLAN.md  STATUS.md  TDD_PROGRESS.md  TECHNICAL_DECISIONS.md  Taskfile.yml  VISION.md  fix_linting.nu  fix_linting.sh  go.mod  go.sum  mutation-results.txt  pipeline_test_output.txt
.claude/: AGENTS.md
docs/: API_REFERENCE.md  CLI_OPENAPI_SPEC.yaml  CLI_REFERENCE.md  CLI_SPEC_SUMMARY.md  EVENT_PIPELINE_MIGRATION.md  FINAL_LINTING_SUMMARY_2025-10-30.md  FORGE_ADD.md  FP_AUDIT_CLEANUP.md  FP_IMPROVEMENTS_SUMMARY.md  FP_REFACTORING_COMPLETE.md  LINTING_ENHANCEMENTS.md  LINTING_PROGRESS.md  (+8 more)
examples/generated-python-lambda/: .gitignore  DEPLOY.md  Makefile  README.md  TERRAFORM.md  Taskfile.yml  pyproject.toml
examples/generated-python-lambda/service/dal/: dynamodb_handler.py
examples/generated-python-lambda/service/dal/models/: db.py
examples/generated-python-lambda/service/handlers/: handle_request.py
examples/generated-python-lambda/service/handlers/models/: env_vars.py
examples/generated-python-lambda/service/handlers/utils/: observability.py  rest_api.py
examples/generated-python-lambda/service/logic/: business_logic.py
examples/generated-python-lambda/service/models/: input.py  output.py
examples/generated-python-lambda/terraform/: apigateway.tf  dynamodb.tf  iam.tf  lambda.tf  outputs.tf  test.tfplan  variables.tf
(+2865 files in other folders)
