[build-system]
requires = ["poetry>=2.0.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "orders-service"
version = "1.0.0"
description = "Orders service API - Create order endpoint"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "^2.0.0"
aws-lambda-powertools = {extras = ["tracer"], version = "^3.7.0"}
aws-lambda-env-modeler = "*"
boto3 = "^1.26.0"
mypy-boto3-dynamodb = "*"
cachetools = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-mock = "*"
pytest-cov = "*"
ruff = "*"
mypy = "*"

[tool.ruff]
line-length = 150
target-version = "py3.13"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B"]
ignore = ["E203", "E266", "E501", "W191"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
